--- a/main.css
+++ b/main.css
@@ -1,50 +1,59 @@
+/* Estilos generales */
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: burlywood;
-    
-  }
+  font-family: 'Roboto';
+  color: white;
+  margin: 0;
+  padding: 0;
+  background-color: cadetblue;
+  box-sizing: border-box;
+}
+
+/* Estilos del encabezado */
+header {
+  background-color: #333;
+  color: white;
+  text-align: center;
+  padding: 1rem;
   
-  header {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 1rem;
-  }
+}
+
+
+
+/* Estilos de la lista */
+ul {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+  background-color: gold;
+  margin: 20px;
+  font-family: 'Roboto';
+  color: #333;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  line-height: 1.6;
+}
+
+ul li {
+  padding: 10px;
+  transition: background-color 0.3s;
+}
+
+ul li:hover {
+  background-color: green;
+}
+
+/* Estilos de la información del país */
+#countryInfo {
+  text-align: center;
+  margin-top: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: black;
   
-  input {
-    padding: 0.5rem;
-    border: none;
-    border-radius: 4px;
-    width: 100%;
-    max-width: 400px;
-  }
-  
-  main {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 80vh;
-  }
-  
-  ul {
-    list-style: none;
-    padding: 0;
-    text-align: center;
-  }
-  
-  li {
-    margin: 0.5rem;
-    padding: 1rem;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  li:hover {
-    background-color: #9e9b9b;
-  
-  }
-  
+}
+
+#countryInfo img {
+  max-width: 100px;
+  margin-bottom: 10px;
+}
